cmake_minimum_required(VERSION 2.8)

find_package(CUDA REQUIRED)


if (UNIX)
	set(CMAKE_CXX_FLAGS "-mf16c")
endif()
if(CUDA_FOUND)
    message("-- CUDA --")
    message("Version: " ${CUDA_VERSION})
    message("Library: " ${CUDA_CUDA_LIBRARY})
    message("Runtime: " ${CUDA_CUDART_LIBRARY})
    set(CUDA_NVCC_FLAGS "-gencode arch=compute_61,code=sm_61")
    set(CUDA_SOURCES multiply.cu)
    set(CMAKE_BUILD_TYPE Release)
	link_directories(${CUDA_CUDART_LIBRARY})
	add_definitions(-DHAVE_CUDA)
else(CUDA_FOUND)
    message("Could not find CUDA in this system!")
endif(CUDA_FOUND)

set(CMAKE_CXX_STANDARD 11)
cuda_add_executable(fp16Mul multiply.cpp timeMeasure.cpp random.cpp ${CUDA_SOURCES})
add_executable(convertFp16 convert.cpp timeMeasure.cpp random.cpp)
